tests/analyzer/fail/enum-out-of-range-signed.api
// expected: 1005

type bad = enum(i8) {
  a = -129,
};
